# agent-os

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  VISION.md  agentic-os  compose.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/deploy/: worker-loop.sh
backend/migrations/: env.py
backend/migrations/versions/: 166faaad94d3_foundation_domain.py  2c4b8f91a61d_task_agent_assignment_evidence.py  2e0446f14592_mcp_discovery_health_evidence.py  4bbfa2a607f8_governed_agent_configuration_.py  (+21 more)
backend/tests/: factories.py  sandbox_conformance.py  test_access_sharing_durability.py  test_api.py  test_artifact_ingestion.py  test_artifact_storage.py  test_assignment.py  test_authorization_api.py  test_bootstrap_concurrency.py  test_capability_grants_api.py  test_code_index.py  test_concurrent_goal_execution.py  test_config_validation.py  test_decomposition.py  test_definition_visibility_api.py  test_domain_migrations.py  test_goal_lifecycle_api.py  test_goal_planning_api.py  test_goal_planning_persistence.py  test_governance_api.py  test_health.py  test_local_deployment.py  test_mcp_discovery.py  test_model_harness.py  test_model_profile_probing.py  test_multi_agent_verification.py  test_observability_api.py  test_operations.py  test_plan_execution_dispatch.py  test_redaction.py  test_restart_recovery.py  test_sandbox_docker.py  test_sandbox_execution.py  test_sandbox_podman.py  test_sandbox_policy.py  test_scheduler.py  test_skill_packages.py  test_team_access_persistence.py  test_team_project_access_api.py  test_worker.py  (+2 more)
(+147 files in other folders)
