[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-os"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
agentic-os = "agentic_os.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_os"]

